--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fiuber-documentacion",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fiubergrupo6.github.io/fiuber-documentacion/",
+  "homepage": "https://fiubergrupo6.github.io/fiuber-documentacion/#",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
